DTR-6052 Fix charity name caption wrapping (#609)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,10 @@
   word-break: break-all;
 }
 
+.charity-name-caption {
+  overflow-wrap: break-word;
+}
+
 .claim-type-hint {
   color: #484949;
 }
